# userver

./: Untitled.ipynb
core/include/userver/ws/: ws_server.h
core/src/ws/: ws_server.cpp
samples/: CMakeLists.txt
samples/http_chat/: CMakeLists.txt  http_chat.cpp  message.hpp  static_config.yaml
samples/ws_sample/: CMakeLists.txt  client_reader.py  client_writer.py  config_dev.yaml  sample.cpp  ws_chat_listener.py  ws_client.py
samples/ws_sample/tests/: conftest.py  test_handshake.py
